@@ -3892,7 +3892,7 @@
 				  GEN_INT ((((rs6000_fpmem_offset & 0xffff)
 					     ^ 0x8000) - 0x8000))));
 
-  return \"stfd %0,%w2\";
+  return \"stfd %0,%2\";
 }"
   [(set_attr "type" "fpstore")])
 
@@ -5568,7 +5568,9 @@
   if (GET_CODE (operands[0]) != REG)
     operands[1] = force_reg (HImode, operands[1]);
 
-  if (CONSTANT_P (operands[1]) && GET_CODE (operands[1]) != CONST_INT)
+  if (CONSTANT_P (operands[1])
+      && GET_CODE (operands[1]) != CONST_INT
+      && GET_CODE (operands[1]) != CONSTANT_P_RTX)
     {
       operands[1] = force_const_mem (HImode, operands[1]);
       if (! memory_address_p (HImode, XEXP (operands[1], 0))
@@ -5603,7 +5605,9 @@
   if (GET_CODE (operands[0]) != REG)
     operands[1] = force_reg (QImode, operands[1]);
 
-  if (CONSTANT_P (operands[1]) && GET_CODE (operands[1]) != CONST_INT)
+  if (CONSTANT_P (operands[1])
+      && GET_CODE (operands[1]) != CONST_INT
+      && GET_CODE (operands[1]) != CONSTANT_P_RTX)
     {
       operands[1] = force_const_mem (QImode, operands[1]);
       if (! memory_address_p (QImode, XEXP (operands[1], 0))
@@ -5938,7 +5942,7 @@
 }")
 
 ;; Don't have reload use general registers to load a constant.  First,
-;; it might not work if the output operand has is the equivalent of
+;; it might not work if the output operand is the equivalent of
 ;; a non-offsettable memref, but also it is less efficient than loading
 ;; the constant into an FP register, since it will probably be used there.
 ;; The "??" is a kludge until we can figure out a more reasonable way
@@ -5991,8 +5995,8 @@
    (set_attr "length" "8,8,8,8,12,16,*,*,*")])
 
 (define_insn "*movdf_softfloat32"
-  [(set (match_operand:DF 0 "nonimmediate_operand" "=r,r,o,r,r,r")
-	(match_operand:DF 1 "input_operand" "r,o,r,G,H,F"))]
+  [(set (match_operand:DF 0 "nonimmediate_operand" "=r,r,m,r,r,r")
+	(match_operand:DF 1 "input_operand" "r,m,r,G,H,F"))]
   "! TARGET_POWERPC64 && TARGET_SOFT_FLOAT
    && (register_operand (operands[0], DFmode)
        || register_operand (operands[1], DFmode))"
@@ -6032,8 +6036,8 @@
    (set_attr "length" "8,8,8,8,12,16")])
 
 (define_insn "*movdf_hardfloat64"
-  [(set (match_operand:DF 0 "nonimmediate_operand" "=!r,??r,o,!r,!r,!r,f,f,m")
-	(match_operand:DF 1 "input_operand" "r,o,r,G,H,F,f,m,f"))]
+  [(set (match_operand:DF 0 "nonimmediate_operand" "=!r,??r,m,!r,!r,!r,f,f,m")
+	(match_operand:DF 1 "input_operand" "r,m,r,G,H,F,f,m,f"))]
   "TARGET_POWERPC64 && TARGET_HARD_FLOAT
    && (register_operand (operands[0], DFmode)
        || register_operand (operands[1], DFmode))"
@@ -6051,8 +6055,8 @@
    (set_attr "length" "4,4,4,8,12,16,4,4,4")])
 
 (define_insn "*movdf_softfloat64"
-  [(set (match_operand:DF 0 "nonimmediate_operand" "=r,r,o,r,r,r")
-	(match_operand:DF 1 "input_operand" "r,o,r,G,H,F"))]
+  [(set (match_operand:DF 0 "nonimmediate_operand" "=r,r,m,r,r,r")
+	(match_operand:DF 1 "input_operand" "r,m,r,G,H,F"))]
   "TARGET_POWERPC64 && TARGET_SOFT_FLOAT
    && (register_operand (operands[0], DFmode)
        || register_operand (operands[1], DFmode))"
